Fix search field alignment

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -229,7 +229,6 @@ nav {
 
   #search-field {
     height: 50px;
-    padding-top: 15px;
     font-size: 20px;
     color: #243e2e;
   }
